# luke-poc

./: .env.example  .gitignore  AI-AGENT.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  CLAUDE.md  README.md  RESEARCH.md  SESSION_FEATURES.md  SYSTEM_STATUS.md  Setup.md  TESTING_GUIDE.md  TEST_SCRIPTS_UPDATED.md  docker-compose.yml  pyproject.toml  run_tests.sh  test_conversations.sh  test_conversations_es.sh  test_session_binding_unit.py  test_session_feature.py  test_streaming.html
ai-agent/: Dockerfile  README.md  requirements.txt
ai-agent/docs/: ADR-001-context-management.md  CONTEXT_ARCHITECTURE.md  CONTEXT_MANAGEMENT_IMPLEMENTATION.md
ai-agent/src/: main.py
ai-agent/src/agents/: workflow_conversation_agent.py
ai-agent/src/api/: chat_router.py  session_router.py  workflow_router.py
ai-agent/src/core/: chat_binding_manager.py  config.py  conversation_manager.py  conversation_persistence.py  (+12 more)
ai-agent/tests/: test_agent.py  test_api.py  test_conversation_caching.py  test_conversation_persistence.py  test_conversation_summarizer.py  test_system_prompts.py  test_token_counter.py  test_workflow_context.py  test_workflow_memory.py
mcp-server/: Dockerfile  requirements.txt
mcp-server/src/: config.py  server.py  svc_client.py
mcp-server/tests/: test_server.py
shared/: config.py  logging_config.py
shared/schemas/: __init__.py  errors.py  workflow.py
storage/workflows/: wf_approval.json  wf_incidentes.json  wf_tasks.json
svc-builder/: Dockerfile  requirements.txt
svc-builder/app/: main.py
svc-builder/tests/: test_api.py
tests/: integration_test.py
(+15 files in other folders)
