[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-agent-shared"
version = "0.1.0"
description = "Shared schemas and utilities for Chat Agent PoC"
authors = [{name = "Chat Agent Team"}]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.setuptools]
packages = ["shared", "shared.schemas"]

[tool.setuptools.package-dir]
"" = "."